--- a/Graphql.PoC.Server.Domain/Graphql.PoC.Server.Infra.csproj
+++ b/Graphql.PoC.Server.Domain/Graphql.PoC.Server.Infra.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="HotChocolate.Abstractions" Version="12.5.0" />
+    <PackageReference Include="HotChocolate.Data" Version="12.5.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
   </ItemGroup>
