--- a/Graphql.PoC.Server.HotChocolate/Graphql.PoC.Server.HotChocolate.csproj
+++ b/Graphql.PoC.Server.HotChocolate/Graphql.PoC.Server.HotChocolate.csproj
@@ -13,16 +13,22 @@
 	<ItemGroup>
 		<PackageReference Include="HotChocolate.AspNetCore" Version="12.5.0" />
 		<PackageReference Include="HotChocolate.Data.EntityFramework" Version="12.5.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.1">
+		<PackageReference Include="HotChocolate.Diagnostics" Version="12.5.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.1" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.1">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+		<PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.2.0-rc1" />
+		<PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.2.0-rc1" />
+		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc8" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc8" />
+		<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc8" />
 	</ItemGroup>
 
 	<ItemGroup>
